# upasak

./: .gitignore  LICENSE  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
examples/basic-fine-tune/: README.md  run_basic_finetune.py  tokenized_train_dataset.json  tokenized_validation_dataset.json
examples/data-preparation/: README.md  tokenization.py
examples/data-sanitization/: README.md  detection_and_action.py  pii_pipeline.py  pii_test_dataset.jsonl  sanitized_output.jsonl
examples/full-fine-tune/: README.md  dummy_dataset.json  tokenization_to_finetuning.py
examples/no_code_finetune/: run_app.py
src/upasak/: __init__.py
src/upasak/data_sanitization/: __init__.py  pii-detection-patterns.yaml  pii-generator-mapping.yaml  pii.py
src/upasak/fine_tune/: __init__.py  trainer_config.py  training_engine.py
src/upasak/preprocessing/: __init__.py  tokenizer_wrapper.py
src/upasak/ui/: __init__.py  interface.py
src/upasak/utils/: __init__.py  common.py  inference_template.py
